--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.2.0",
+    "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
+    "expo-file-system": "^15.6.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-media-library": "~15.4.1",
+    "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
+    "hoist-non-react-statics": "^3.3.2",
+    "i18next": "^23.5.1",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-i18next": "^13.2.2",
+    "react-native": "0.72.5",
+    "react-native-date-picker": "^4.3.3",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-reanimated": "~3.3.0",
+    "styled-components": "^6.0.8",
+    "sync-storage": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
