--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
     "expo-permissions": "~14.2.1",
+    "expo-print": "^12.6.0",
+    "expo-sharing": "^11.7.0",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "hoist-non-react-statics": "^3.3.2",
@@ -29,7 +31,9 @@
     "react-native": "0.72.5",
     "react-native-date-picker": "^4.3.3",
     "react-native-flash-message": "^0.4.2",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-print": "^0.11.0",
     "react-native-reanimated": "~3.3.0",
     "styled-components": "^6.0.8",
     "sync-storage": "^0.4.2"
