--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
     "expo-permissions": "~14.2.1",
-    "expo-print": "^12.6.0",
-    "expo-sharing": "^11.7.0",
+    "expo-print": "~12.4.2",
+    "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "hoist-non-react-statics": "^3.3.2",
