--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^7.2.0",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.5.1",
-    "expo": "~49.0.13",
+    "expo": "~49.0.15",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
@@ -28,7 +29,7 @@
     "i18next": "^23.5.1",
     "react": "18.2.0",
     "react-i18next": "^13.2.2",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-date-picker": "^4.3.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-html-to-pdf": "^0.12.0",
@@ -39,7 +40,8 @@
     "sync-storage": "^0.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "husky": "^4.3.8"
   },
   "private": true
 }
